--- a/AD/Client/AD.Client.csproj
+++ b/AD/Client/AD.Client.csproj
@@ -11,11 +11,11 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.36" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.36" PrivateAssets="all" />
-    <PackageReference Include="SkiaSharp.Views.Blazor" Version="3.119.2-preview.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Shared\AD.Shared.csproj" />
+    <ProjectReference Include="..\..\AD.RCL\AD.RCL.csproj" />
+    <ProjectReference Include="..\Shared\AD.CL.csproj" />
   </ItemGroup>
 
   <ItemGroup>
